--- a/www/css/main.css
+++ b/www/css/main.css
@@ -163,6 +163,55 @@ li {
 margin-left: 15px;
 }
 
+/****************************************************/
+/* Modal dialog definition for confirmation dialogs */
+/****************************************************/
+.md-modal {
+    position: fixed;
+    top: 150px;
+    left: 220px;
+    width: 400px;
+    z-index: 2000;
+    visibility: hidden;
+}
+ 
+.md-show {
+    visibility: visible;
+}
+.md-content {
+	color: black;
+	background: white;
+	position: relative;
+	border-radius: 8px;
+	height:220px;
+	padding:10px;
+	margin: 0 auto;
+	box-shadow: 5px 5px 5px #888888;
+} 
+ 
+ 
+.md-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    opacity: 0;
+    background:  rgba(168,168,168,0.6) ;
+    transition: all 0.6s;
+}
+ 
+.md-show ~ .md-overlay {
+    opacity: 1;
+    visibility: visible;
+}
+
+
+/************************************/
+/* definitions for the content divs */
+/************************************/
 #container {
 	overflow:hidden;
 	position:relative;
@@ -174,10 +223,6 @@ margin-left: 15px;
 	z-index:1;
 	background-color:#ededed;
 }
-
-
-
-
 
 #overview {
 	position: absolute;
