--- a/www/css/theme.css
+++ b/www/css/theme.css
@@ -329,13 +329,16 @@ table tr:hover td {
 
 }
  
-.icon-cancel:before { content: '\e800'; } /* '' */
+.icon-cancel:before { content: '\e800'; } 
 .icon-right-big:before { margin-left: .4em;content: '\e801'; } /* '' */
-.icon-ccw:before { content: '\e802'; } /* '' */
-.icon-filter:before { content: '\e803'; } /* '' */
+.icon-ccw:before { content: '\e802'; } 
+.icon-filter:before { content: '\e803'; } 
 .icon-commit-config:before { content: '\e804'; } 
 .icon-ok:before { content: '\e808'; }   
 .icon-keys:before { content: '\e809'; }
 .icon-next:before { content: '\e80a'; }
 .icon-search:before { font-size:12px; content: '\e80d'; position:relative; top:-.1em; }
- 
+.icon-exit:before { content: '\e80f'; }
+.icon-info:before { content: '\e810'; }
+.icon-wand:before { content: '\e80c'; }
+.icon-replicate:before { content: '\e811'; }
