--- a/www/css/theme.css
+++ b/www/css/theme.css
@@ -351,7 +351,7 @@ table tr:hover td {
 .icon-ccw:before { content: '\e802'; } 
 .icon-filter:before { content: '\e803'; } 
 .icon-commit-config:before { content: '\e804'; } 
-.icon-ok:before { content: '\e808'; color:green;font-size:14px;margin-bottom:10px;}   
+.icon-ok:before { content: '\e808'; color:green;font-size:14px;margin-bottom:10px;margin-right:15px;}   
 .icon-keys:before { content: '\e809'; }
 .icon-next:before { content: '\e80a'; }
 .icon-search:before { font-size:12px; content: '\e80d'; position:relative; top:-.1em; }
