--- a/www/css/main.css
+++ b/www/css/main.css
@@ -675,8 +675,8 @@ position: relative;
 	margin:auto auto;
 	width:250px;
 	height:100px;
-	font-size:14px;
-	font-family:mono;
+	font-size:12px;
+	font-family:"Courier New", Courier, monospace;
 	border:1px solid #e0e0e0;
 	border-radius:5px;
 	background:#ededed;
